# LinearSolver

./: .gitignore  CMakeLists.txt  README.md  bigMSolver.cpp  doubleStageSolver.cpp  doubleStageSolver.h  dualSimplexSolver.cpp  dualSimplexSolver.h  main.cpp  makefile  matrix.cpp  matrix.h  row.cpp  row.h  solver.cpp  solver.h  test.sh  utility.cpp  utility.h  vanillaSimplexSolver.cpp  vanillaSimplexSolver.h
data/: data_1.txt  dual_test.sh  res_data_1.txt  simplex_test.sh  test.sh
data/input/: adlittle.txt  afiro.txt  agg3.txt  blend.txt  brandy.txt  degeneracy.txt  emptyest.txt  example.txt  infeasible.txt  muloptimal.txt  nazareth.txt  sc50a.txt  sc50b.txt  share1b.txt  share2b.txt  stocfor1.txt  testprob.txt  unbounded.txt
data/input-dual/: adlittle.txt  afiro.txt  bandm.txt  blend.txt  brandy.txt  emptyest.txt  example.txt  maros.txt  nazareth.txt  nexample.txt  sc50a.txt  sc50b.txt  stocfor1.txt  testprob.txt
data/mps/: adlittle.mps  agg3.mps  blend.mps  brandy.mps  maros.mps  nazareth.mps  sc50b.mps  share1b.mps  share2b.mps  stocfor1.mps  testprob.mps
data/solution/: adlittle.out  afiro.out  agg.out  agg2.out  agg3.out  bandm.out  blend.out  brandy.out  brazil3.out  degeneracy.out  example.out  maros.out  muloptimal.out  nexample.out  sc50a.out  share1b.out  share2b.out  stocfor1.out  testprob.out
data/solution-dual/: adlittle.out  afiro.out  bandm.out  brandy.out  emptyest.out  example.out  maros.out  nazareth.out  nexample.out  sc50a.out  sc50b.out  stocfor1.out  testprob.out
input/: adlittle.txt  brandy.txt  maros.txt  muloptimal.txt  nazareth.txt  nexample.txt  sc50b.txt  share2b.txt  stocfor1.txt
mps/: afiro.mps  agg3.mps  brandy.mps  emptyest.mps  example.mps  nazareth.mps  nexample.mps  sc50a.mps
solution/: adlittle.out  afiro.out  agg3.out  brandy.out  degeneracy.out  example.out  muloptimal.out  sc50b.out  share2b.out  testprob.out
src/: CMakeLists.txt  bigMSolver.cpp  bigMSolver.h  dualSimplexSolver.h  row.h  solver.cpp  solver.h  utility.cpp  utility.h
